sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:29: error: Unmatched closing brace '}' ignored here
}
^